--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
-  "proxy": "http://localhost:4000",
+  "proxy": "http://192.168.11.233:4000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
